# uk-ai-act-mcp

./: .mcp.json  LICENSE  README.md  pyproject.toml  server.py  smithery.yaml
.well-known/mcp/: server-card.json
tests/: test_server.py
