[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uk-ai-act-mcp"
version = "1.0.0"
description = "UK AI regulation compliance tools for AI agents. Capabilities: UK risk classification, AISI alignment, EU-UK comparison, readiness assessment, impact assessment. Built by MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["mcp", "uk-ai-act", "aisi", "regulation", "compliance", "meok"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/uk-ai-act-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
uk_ai_act_mcp = "server:main"
